# StellarStack

./: CHANGELOG.md  CONTRIBUTING.md  README.md  commitlint.config.js  install-script.sh  install.sh  opencode.json  package.json  pnpm-lock.yaml  railway.toml  release-please-config.json  renovate.json
.claude/: settings.local.json
.github/workflows/: daemon-release.yml  docker-build.yml  panel-docker.yml  release-please.yml
.husky/: commit-msg
apps/api/prisma/: schema.prisma
apps/api/src/: index.ts
apps/api/src/lib/: cloudflare.ts  webhooks.ts  ws.ts
apps/api/src/middleware/: auth.ts
apps/api/src/routes/: account.ts  domains.ts  nodes.ts  remote.ts  servers.ts  settings.ts  webhooks.ts
apps/daemon/: .gitignore  config.toml  install.sh
apps/daemon/src/server/: install.rs  server.rs
apps/daemon/src/sftp/: auth.rs  server.rs
apps/docs/.source/: index.ts
apps/home/app/: page.tsx
apps/home/components/: Footer.tsx  Navigation.tsx
apps/web/: next.config.mjs  package.json
apps/web/app/: page.tsx
apps/web/components/: upload-progress-indicator.tsx  upload-provider.tsx
apps/web/contexts/: ThemeContext.tsx
apps/web/hooks/: use-admin-theme.tsx  useWebSocket.ts
apps/web/lib/: api-url.ts  api.ts  api.types.ts  auth-client.ts  codemirror-extensions.ts
docker/: .env.example  .gitignore  DOCKGE.md  README.md  docker-compose.yml  setup.sh
docker/dockerfiles/: Dockerfile  Dockerfile.api  Dockerfile.web
docker/nginx/: nginx.conf
docker/nginx/templates/: api.conf.template  web.conf.template
docker/scripts/: generate-secrets.sh  health-check.sh
scripts/: rewrite-commits-interactive.sh
stack/: .gitignore  docker-compose.yml  install.sh  nixpacks.toml  package.json  pnpm-lock.yaml
stack/.claude/: settings.local.json
stack/.github/workflows/: daemon-release.yml
stack/apps/api/: .env.example  package.json  railway.toml
stack/apps/daemon/: .env.example  API.md  Cargo.toml  config.toml  install.sh
stack/apps/daemon/src/: config.rs  error.rs  lib.rs  main.rs  scheduler.rs
stack/apps/daemon/src/api/: client.rs  errors.rs  mod.rs  types.rs
stack/apps/daemon/src/backup/: adapter.rs  backup.rs  local.rs  mod.rs  s3.rs
stack/apps/daemon/src/cmd/: configure.rs  diagnostics.rs  mod.rs  root.rs
stack/apps/daemon/src/config/: config.rs  mod.rs
stack/apps/daemon/src/cron/: mod.rs  scheduler.rs
stack/apps/daemon/src/database/: activity.rs  mod.rs  state.rs
stack/apps/daemon/src/docker/: mod.rs  service.rs
stack/apps/daemon/src/environment/: mod.rs  traits.rs
stack/apps/daemon/src/environment/docker/: container.rs  environment.rs  mod.rs  power.rs  stats.rs
stack/apps/daemon/src/events/: bus.rs  mod.rs  state_store.rs
stack/apps/daemon/src/filesystem/: archive.rs  disk.rs  errors.rs  filesystem.rs  mod.rs  path.rs
stack/apps/daemon/src/parser/: ini.rs  json.rs  mod.rs  properties.rs  xml.rs  yaml.rs
stack/apps/daemon/src/router/: mod.rs
stack/apps/daemon/src/router/handlers/: backup.rs  download.rs  files.rs  mod.rs  servers.rs  system.rs  upload.rs
stack/apps/daemon/src/router/middleware/: auth.rs  mod.rs  server.rs
stack/apps/daemon/src/router/websocket/: handler.rs  mod.rs
stack/apps/daemon/src/routes/: backups.rs  containers.rs  files.rs  mod.rs  schedules.rs  websocket.rs
stack/apps/daemon/src/server/: configuration.rs  crash.rs  install.rs  manager.rs  mod.rs  power.rs  server.rs  state.rs
stack/apps/daemon/src/sftp/: auth.rs  handler.rs  mod.rs  server.rs
stack/apps/daemon/src/system/: locker.rs  mod.rs  sink.rs
stack/apps/daemon/src/types/: blueprint.rs  container.rs  mod.rs
stack/apps/docs/: eslint.config.mjs  mdx-components.tsx  next.config.mjs  package.json  tsconfig.json
stack/apps/home/: next.config.mjs  package.json
stack/apps/web/: next.config.mjs  package.json  railway.toml
(+163 files in other folders)
